--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "oligrapher2-annotations",
   "version": "1.0.0",
   "description": "Annotations UI for Oligrapher 2",
-  "main": "main.jsx",
+  "main": "build/oligrapher.annotations.min.js",
   "scripts": {
-    "dev": "npm run dev-build",
     "dev-build": "npm run && webpack-dev-server --devtool eval --progress --history-api-fallback --colors --hot --content-base build --port 7090 --config webpack.dev.config",
     "prod-build": "NODE_ENV=production webpack -p --display-modules --config webpack.prod.config.js",
     "test": "jest"
@@ -21,7 +20,7 @@
     "babel-loader": "^5.1.3",
     "lodash": "^3.10.1",
     "pushstate-server": "^1.6.0",
-    "react": "^0.14.2",
+    "react": "^0.14",
     "react-anything-sortable": "^1.1.0",
     "react-dom": "^0.14.2",
     "react-hot-loader": "^1.3.0",
