--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-redux": "^4.0.0",
     "redux": "^3.0.4",
     "shortid": "^2.2.4",
+    "titleize": "^1.0.0",
     "webpack": "^1.12.4",
     "webpack-dev-server": "^1.12.1"
   },
