--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^0.14.2",
     "react-hot-loader": "^1.3.0",
     "react-hotkeys": "^0.7.0",
+    "react-medium-editor": "^1.6.1",
     "react-redux": "^4.0.0",
     "redux": "^3.0.4",
     "shortid": "^2.2.4",
