--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "oligrapher2-annotations",
-  "version": "1.0.0",
+  "version": "0.1.1",
   "description": "Annotations UI for Oligrapher 2",
   "main": "build/oligrapher.annotations.min.js",
   "scripts": {
@@ -19,10 +19,11 @@
     "babel-core": "^5.4.7",
     "babel-loader": "^5.1.3",
     "lodash": "^3.10.1",
+    "oligrapher2-editor": "^0.1",
     "pushstate-server": "^1.6.0",
     "react": "^0.14",
     "react-anything-sortable": "^1.1.0",
-    "react-dom": "^0.14.2",
+    "react-dom": "^0.14",
     "react-hot-loader": "^1.3.0",
     "react-hotkeys": "^0.7.0",
     "react-medium-editor": "^1.6.1",
@@ -35,8 +36,10 @@
   },
   "devDependencies": {
     "babel-jest": "^5.3.0",
+    "css-loader": "^0.23.1",
     "jest-cli": "^0.7.1",
-    "react-addons-test-utils": "^0.14.2"
+    "react-addons-test-utils": "^0.14.2",
+    "style-loader": "^0.13.0"
   },
   "jest": {
     "scriptPreprocessor": "<rootDir>/node_modules/babel-jest",
