--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "oligrapher2-annotations",
-  "version": "0.1.1",
+  "version": "0.1.3",
   "description": "Annotations UI for Oligrapher 2",
-  "main": "build/oligrapher.annotations.min.js",
+  "main": "build/oligrapher.annotations.js",
   "scripts": {
     "dev-build": "npm run && webpack-dev-server --devtool eval --progress --history-api-fallback --colors --hot --content-base build --port 7090 --config webpack.dev.config",
-    "prod-build": "NODE_ENV=production webpack -p --display-modules --config webpack.prod.config.js",
+    "prod-build": "webpack --display-modules --config webpack.prod.config.js --output-filename=oligrapher.annotations.js",
+    "min-build": "webpack -p --display-modules --config webpack.prod.config.js --output-filename=oligrapher.annotations.min.js",
     "test": "jest"
   },
   "author": "Matthew Skomarovsky",
@@ -30,16 +31,17 @@
     "react-redux": "^4.0.0",
     "redux": "^3.0.4",
     "shortid": "^2.2.4",
-    "titleize": "^1.0.0",
-    "webpack": "^1.12.4",
-    "webpack-dev-server": "^1.12.1"
+    "titleize": "^1.0.0"
   },
   "devDependencies": {
     "babel-jest": "^5.3.0",
     "css-loader": "^0.23.1",
     "jest-cli": "^0.7.1",
     "react-addons-test-utils": "^0.14.2",
-    "style-loader": "^0.13.0"
+    "style-loader": "^0.13.0",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.12.4",
+    "webpack-dev-server": "^1.12.1"
   },
   "jest": {
     "scriptPreprocessor": "<rootDir>/node_modules/babel-jest",
